5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1638_2724.log
== TEST (2019-04-10 13:49:28) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c>a):
		print(a)	
elif(b<c):
	if(a>b):
		print(b)
	else:
		print(a)
elif(c<b):
-- ERROR:
File "XXXX", line 14
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:51:07) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c>a):
		print(a)	
elif(b<c):
	if(a>b):
		print(b)
elif(c<b):
	if(a>c):
		print(c)
-- ERROR:
File "XXXX", line 14
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:52:05) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c<a):
		print(a)	
elif(b<c):
	if(a<b):
		print(b)
elif(c<b):
	if(a<c):
		print(c)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:57:50) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c<a):
		print(a)
	else:
		print(b)
elif(b<c):
	if(a<b):
		print(b)
	else:
		print(c)
elif(c<a):
	if(b<c):
		print(c)
	else:
		print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:58:00) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c<a):
		print(a)
	else:
		print(b)
elif(b<c):
	if(a<b):
		print(b)
	else:
		print(c)
elif(c<a):
	if(b<c):
		print(c)
	else:
		print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:58:08) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c<a):
		print(a)
	else:
		print(b)
elif(b<c):
	if(a<b):
		print(b)
	else:
		print(c)
elif(c<a):
	if(b<c):
		print(c)
	else:
		print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:39:25) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c<a):
		print(a)
	else:
		print(b)
elif(b<c):
	if(a<b):
		print(b)
	else:
		print(c)
elif(c<a):
	if(b<c):
		print(c)
	else:
		print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:39:43) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c<a):
		print(a)
	else:
		print(b)
elif(b<c):
	if(a<b):
		print(b)
	else:
		print(c)
elif(c<a):
	if(b<c):
		print(c)
	else:
		print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:42:55) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b>c):
	print(b)
elif(b<a>c):
	print(a)
else:
	print(c)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:45:40) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(b)
elif(b>c>a):
	print(c)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:47:23) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a<b):
	if(c<a):
		print(a)
	else:
		print(b)
elif(b<c):
	if(a<b):
		print(b)
	else:
		print(c)
elif(c<a):
	if(b<c):
		print(c)
	else:
		print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:48:02) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(b)
elif(b>c>a):
	print(c)
elif(a<b<c):
	print(b)
elif(b<c<a):
	print(c)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:48:09) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(b)
elif(b>c>a):
	print(c)
elif(a<b<c):
	print(b)
elif(b<c<a):
	print(c)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:48:20) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(b)
elif(b>c>a):
	print(c)
elif(a<b<c):
	print(b)
elif(b<c<a):
	print(c)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:11:48) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(b)
elif(b>c>a):
	print(c)
elif(a<b<c):
	print(b)
elif(b<c<a):
	print(c)
else:
	print(a)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:12:02) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(b)
elif(b>c>a):
	print(c)
elif(a<b<c):
	print(b)
elif(b<c<a):
	print(c)
else:
	print(a)
-- EXECUTION TIME:
0.210222
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:44:17) 
-- CODE:
a = int(input("numero:"))
b = int(input("numero:"))
c = int(input("numero:"))

if(a>b>c):
	print(b)
elif(b>c>a):
	print(c)
elif(a<b<c):
	print(b)
elif(b<c<a):
	print(c)
else:
	print(a)
-- EXECUTION TIME:
0.191921
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
